--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         </div>
     </header>
 
+    <main>
+        <section class="section-about">
+            <div class="u-center-text">
+                <h2 class="heading-secondary">
+                    Naslov koji na kome se radi animacija
+                </h2>
+            </div>
+        </section>
+    </main>
+
     <!-- <div class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
