--- a/index.html
+++ b/index.html
@@ -32,10 +32,28 @@
 
     <main>
         <section class="section-about">
-            <div class="u-center-text">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Naslov koji na kome se radi animacija
                 </h2>
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <h3 class="heading-tertiary u-margin-bottom-small">h3 neki naslov</h2>
+                    <p class="paragaraph">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab quos vero reiciendis autem blanditiis pariatur alias eius molestiae, ullam quisquam debitis odio id quis facere provident enim eligendi, quas velit!
+                    </p>
+
+                    <h3 class="heading-tertiary u-margin-bottom-small">h3 neki naslov</h2>
+                        <p class="paragaraph">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas suscipit veritatis.
+                        </p>
+
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                </div>
+                <div class="col-1-of-2">
+                    img position
+                </div>
             </div>
         </section>
     </main>
